[gd_scene load_steps=11 format=3 uid="uid://dinm2votyqanu"]

[ext_resource type="Script" uid="uid://bnqfj0j4ho4gp" path="res://npc_village.gd" id="1_0q68v"]
[ext_resource type="Texture2D" uid="uid://dmnb43vqth5vf" path="res://Farm RPG FREE 16x16 - Tiny Asset Pack/Farm RPG FREE 16x16 - Tiny Asset Pack/Character/Idle.png" id="2_qighy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q20fc"]
atlas = ExtResource("2_qighy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6bm1"]
atlas = ExtResource("2_qighy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cx0h"]
atlas = ExtResource("2_qighy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ha0m"]
atlas = ExtResource("2_qighy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rjhfu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q20fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6bm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cx0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ha0m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1tugk"]
size = Vector2(50, 30)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ydrm"]
bg_color = Color(0, 0, 0, 0.415686)

[sub_resource type="LabelSettings" id="LabelSettings_iulpn"]
font_size = 7

[node name="NpcVillage" type="Area2D"]
script = ExtResource("1_0q68v")

[node name="Animated" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_rjhfu")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.223509

[node name="Collision" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_1tugk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixadeDialogo" type="Label" parent="CanvasLayer"]
offset_left = 99.0
offset_top = 481.0
offset_right = 1199.0
offset_bottom = 631.0
theme_override_styles/normal = SubResource("StyleBoxFlat_7ydrm")
autowrap_mode = 2

[node name="TextoDialogo" type="Label" parent="CanvasLayer"]
offset_left = 150.0
offset_top = 495.0
offset_right = 1150.0
offset_bottom = 615.0
theme_override_font_sizes/font_size = 20
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="LabelInteracao" type="Label" parent="."]
offset_left = -19.0
offset_top = -32.0
offset_right = 21.0
offset_bottom = -9.0
label_settings = SubResource("LabelSettings_iulpn")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
